Switch to navbar and container layout

--- a/src/Tippy/Pages/Projects/Index.cshtml
+++ b/src/Tippy/Pages/Projects/Index.cshtml
@@ -9,7 +9,7 @@
     <a asp-page="Create" class="button is-link is-primary">Create new project</a>
 </p>
 
-<table class="table is-striped is-hoverable">
+<table class="table is-striped is-hoverable is-fullwidth">
     <thead>
         <tr>
             <th>
