--- a/src/Tippy/wwwroot/css/site.css
+++ b/src/Tippy/wwwroot/css/site.css
@@ -6,27 +6,13 @@ body {
     height: 100%;
 }
 
-.container.main-container {
-    padding: 0;
-}
-
-.main-columns {
-    margin: 0;
-}
-
-.side-menu-container {
-    height: 100vh;
-}
-
-.side-menu {
-    width: 280px;
+a.navbar-item.is-active:not(:focus):not(:hover) {
+    background-color: hsl(171, 100%, 41%);
 }
 
 .explorer-container {
     border: none;
-    height: 100vh;
-    width: calc(100% + 1.5rem);
-    margin: -0.75rem;
+    height: calc(100vh - 100px);
 }
 
 .log-box {
