--- a/src/Tippy/wwwroot/css/site.css
+++ b/src/Tippy/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-﻿html {
+html {
     height: 100%;
 }
 
@@ -13,11 +13,12 @@ a.navbar-item.is-active:not(:focus):not(:hover) {
 .explorer-container {
     border: none;
     height: calc(100vh - 100px);
+    width: 100%;
 }
 
 .log-box {
     overflow-y: scroll;
-    height: calc(100vh - 120px);
+    height: calc(100vh - 160px);
     border: solid 1px #ccc;
     padding: 20px;
 }
