--- a/src/Tippy/wwwroot/css/site.css
+++ b/src/Tippy/wwwroot/css/site.css
@@ -10,6 +10,11 @@ a.navbar-item.is-active:not(:focus):not(:hover) {
     background-color: hsl(171, 100%, 41%);
 }
 
+a.navbar-item:hover {
+    color: #0a0a0a;
+    background-color: hsl(171, 100%, 41%);
+}
+
 .explorer-container {
     border: none;
     height: calc(100vh - 100px);
