--- a/src/Tippy/Pages/Log.cshtml
+++ b/src/Tippy/Pages/Log.cshtml
@@ -24,6 +24,6 @@ else
                 <i class="fas fa-exclamation-triangle fa-3x"></i>
             </span>
         </p>
-        <p>No chain is running. Please <a asp-page="/Home/Index">start</a> a project/chain first.</p>
+        <p>Current project/chain is not running. Please <a asp-page="/Home/Index">start</a> and select a project first.</p>
     </div>
 }
