--- a/src/Tippy/wwwroot/css/site.css
+++ b/src/Tippy/wwwroot/css/site.css
@@ -27,3 +27,13 @@ a.navbar-item:hover {
     border: solid 1px #ccc;
     padding: 20px;
 }
+
+.button-as-link {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
