--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,19 @@
     </nav>
 
     <div class="container is-fullhd pt-5">
+        @if (ViewData["ErrorMessage"] is string errorMessage && errorMessage.Length > 0)
+        {
+            <div class="notification is-danger">
+                <p class="m-3">
+                    <span class="icon has-text-white">
+                        <i class="fas fa-exclamation-triangle fa-3x"></i>
+                    </span>
+                </p>
+                <p>@errorMessage</p>
+            </div>
+            ViewData.Remove("ErrorMessage");
+        }
+
         @RenderBody()
     </div>
 
