--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="title">Dashboard</h1>
 
-@if (TempData["Message"]?.ToString().Length > 0)
+@if ((TempData["Message"]?.ToString() ?? "").Length > 0)
 {
     <div class="notification is-success">
         <button class="delete"></button>
