--- a/src/Tippy/Pages/Log.cshtml
+++ b/src/Tippy/Pages/Log.cshtml
@@ -9,7 +9,7 @@
 {
     <h1 class="title">Logs</h1>
 
-    <input type="hidden" id="project-id" value="@Model.ActiveProject.ID" />
+    <input type="hidden" id="project-id" value="@Model.ActiveProject.Id" />
     <div class="log-box" id="log-box"></div>
 
     @section Scripts {
