--- a/src/Tippy/Pages/Projects/Reset.cshtml
+++ b/src/Tippy/Pages/Projects/Reset.cshtml
@@ -14,7 +14,7 @@
         </section>
         <footer class="modal-card-foot">
             <form method="post" class="mt-4">
-                <input type="hidden" asp-for="Project.ID" />
+                <input type="hidden" asp-for="Project.Id" />
                 <input type="submit" value="Reset data" class="button is-danger" />
                 <a asp-page="./Index" class="button is-link is-light">Cancel</a>
             </form>
