Rename Log page to NodeLog

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <div class="navbar-start">
                     <a asp-page="/Home/Index" class="navbar-item">Dashboard</a>
                     <a asp-page="/Explorer" class="navbar-item">Explorer</a>
-                    <a asp-page="/Log/Index" class="navbar-item">Logs</a>
+                    <a asp-page="/NodeLog/Index" class="navbar-item">Logs</a>
                     <a asp-page="/Projects/Index" class="navbar-item">Projects</a>
                 </div>
 
