Add option to enable/disable opening browser on launch

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -30,9 +30,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button is-primary">
-                                <strong>todo</strong>
-                            </a>
+                            <a asp-page="/Config/Index" class="navbar-item">Settings</a>
                         </div>
                     </div>
                 </div>
