--- a/src/Tippy/Pages/Config/Index.cshtml
+++ b/src/Tippy/Pages/Config/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model Tippy.Pages.Config.IndexModel
 @{
-    ViewData["Title"] = "Configuration";
+    ViewData["Title"] = "Settings";
 }
 
-<h1 class="title">Configuration</h1>
+<h1 class="title">Settings</h1>
 
 <form method="post">
     <div asp-validation-summary="All"></div>
@@ -19,16 +19,20 @@
 
     <div class="field">
         <div class="control">
-            <label asp-for="Unused" class="label"></label>
-            <input asp-for="Unused" class="input" placeholder="" />
+            <label asp-for="OpenBrowserOnLaunch" class="checkbox">
+                <input asp-for="OpenBrowserOnLaunch" type="checkbox" />
+                @Html.DisplayNameFor(model => model.OpenBrowserOnLaunch)
+            </label>
         </div>
     </div>
 
+    <!--
     <div class="field">
         <div class="control">
             <p class="help is-danger is-size-6">You need to <a asp-page="/Home" class="has-text-weight-semibold">restart the node</a> for the changes to take effect.</p>
         </div>
     </div>
+    -->
 
     <div class="field is-grouped">
         <div class="control">
