--- a/src/Tippy/Pages/NodeLog/Index.cshtml
+++ b/src/Tippy/Pages/NodeLog/Index.cshtml
@@ -13,7 +13,7 @@
         </div>
         <div class="level-right">
             <form method="post">
-                <button asp-page="./OpenFolder" class="button is-success is-small">
+                <button asp-page="./OpenFolder" class="button is-success">
                     <span class="icon">
                         <i class="far fa-folder-open"></i>
                     </span>
