Update title style

--- a/src/Tippy/Pages/Config/Index.cshtml
+++ b/src/Tippy/Pages/Config/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Settings";
 }
 
-<h1 class="title">Settings</h1>
+<h1 class="title has-text-primary">Settings</h1>
 
 <form method="post">
     <div asp-validation-summary="All"></div>
