--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Dashboard";
 }
 
-<h1 class="title">Dashboard</h1>
+<h1 class="title has-text-primary">Dashboard</h1>
 
 @if ((TempData["Message"]?.ToString() ?? "").Length > 0)
 {
