--- a/src/Tippy/Pages/Projects/Details.cshtml
+++ b/src/Tippy/Pages/Projects/Details.cshtml
@@ -3,7 +3,7 @@
 
 @{ ViewData["Title"] = "Project details"; }
 
-<h1 class="title">Project details</h1>
+<h1 class="title has-text-primary">Project details</h1>
 
 <div class="field">
     <div class="control">
