--- a/src/Tippy/Pages/Projects/Index.cshtml
+++ b/src/Tippy/Pages/Projects/Index.cshtml
@@ -3,7 +3,7 @@
 
 @{ ViewData["Title"] = "Projects"; }
 
-<h1 class="title">Projects</h1>
+<h1 class="title has-text-primary">Projects</h1>
 
 <p class="my-4">
     <a asp-page="Create" class="button is-primary">
