--- a/src/Tippy/Pages/Projects/Create.cshtml
+++ b/src/Tippy/Pages/Projects/Create.cshtml
@@ -1,9 +1,9 @@
-@page
+﻿@page
 @model Tippy.Pages.Projects.CreateModel
 
 @{ ViewData["Title"] = "Create project"; }
 
-<h1 class="title">Create project</h1>
+<h1 class="title has-text-primary">Create project</h1>
 
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="has-text-danger-dark"></div>
