--- a/src/Tippy/Pages/Projects/Edit.cshtml
+++ b/src/Tippy/Pages/Projects/Edit.cshtml
@@ -3,7 +3,7 @@
 
 @{ ViewData["Title"] = "Edit project"; }
 
-<h1 class="title">Edit project</h1>
+<h1 class="title has-text-primary">Edit project</h1>
 
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="has-text-danger-dark"></div>
