--- a/src/Tippy/Pages/Projects/Reset.cshtml
+++ b/src/Tippy/Pages/Projects/Reset.cshtml
@@ -9,7 +9,7 @@
         <header class="modal-card-head">
             <p class="modal-card-title">Reset project data</p>
         </header>
-        <section class="modal-card-body">
+        <section class="modal-card-body has-background-danger">
             <p>Are you sure you want to reset all data for project <strong>@Html.DisplayFor(model => model.Project.Name)</strong>?</p>
         </section>
         <footer class="modal-card-foot">
