--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -83,8 +83,34 @@
                                 <span class="icon is-small"><i class="fas fa-tachometer-alt"></i></span>
                                 <span class="menu-text">Dashboard</span>
                             </a>
-
                         </li>
+                        <li>
+                            <a asp-page="/Blocks/Index">
+                                <span class="icon is-small"><i class="fas fa-server"></i></span>
+                                <span class="menu-text">Blocks</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a asp-page="">
+                                <span class="icon is-small"><i class="fas fa-microchip"></i></span>
+                                <span class="menu-text">Transactions</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a asp-page="/Explorer">
+                                <span class="icon is-small"><i class="fab fa-wpexplorer"></i></span>
+                                <span class="menu-text">Explorer</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a asp-page="/NodeLog/Index">
+                                <span class="icon is-small"><i class="far fa-file-alt"></i></span>
+                                <span class="menu-text">Logs</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <p class="menu-label">Configuration</p>
+                    <ul class="menu-list">
                         <li>
                             <a asp-page="/Projects/Index">
                                 <span class="icon is-small"><i class="fas fa-project-diagram"></i></span>
@@ -92,23 +118,6 @@
                             </a>
 
                         </li>
-                        <li>
-                            <a asp-page="/Explorer">
-                                <span class="icon is-small"><i class="fab fa-wpexplorer"></i></span>
-                                <span class="menu-text">Explorer</span>
-                            </a>
-
-                        </li>
-                        <li>
-                            <a asp-page="/NodeLog/Index">
-                                <span class="icon is-small"><i class="far fa-file-alt"></i></span>
-                                <span class="menu-text">Logs</span>
-                            </a>
-
-                        </li>
-                    </ul>
-                    <p class="menu-label">Configuration</p>
-                    <ul class="menu-list">
                         <li>
                             <a asp-page="/Config/Index">
                                 <span class="icon is-small"><i class="fas fa-cog"></i></span> <span class="menu-text">Settings</span>
