Show block datetime

--- a/src/Tippy/Pages/Blocks/Index.cshtml
+++ b/src/Tippy/Pages/Blocks/Index.cshtml
@@ -24,7 +24,7 @@
                     <td>@block.Attributes.TransactionsCount</td>
                     <td>@block.Attributes.Reward</td>
                     <td>@block.Attributes.MinerHash</td>
-                    <td>@block.Attributes.Timestamp</td>
+                    <td>@block.Attributes.Date()</td>
                 </tr>
             }
         </tbody>
