--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-page="">
+                            <a asp-page="/Transactions/Index">
                                 <span class="icon is-small"><i class="fas fa-microchip"></i></span>
                                 <span class="menu-text">Transactions</span>
                             </a>
