--- a/src/Tippy/Pages/Blocks/Index.cshtml
+++ b/src/Tippy/Pages/Blocks/Index.cshtml
@@ -38,7 +38,7 @@
                         }
                     </td>
                     <td>
-                        <a asp-page="/Explorer" asp-route-ref="address/@block.Attributes.MinerHash">
+                        <a asp-page="/Explorer" asp-route-ref="address/@block.Attributes.MinerHash" class="hash-text">
                             @block.Attributes.MinerHash
                         </a>
                     </td>
