If user inputs an address instead of lock arg convert that to lock arg on save

--- a/src/Tippy/Pages/Projects/Create.cshtml
+++ b/src/Tippy/Pages/Projects/Create.cshtml
@@ -48,6 +48,7 @@
             <label asp-for="Project.LockArg" class="label"></label>
             <input asp-for="Project.LockArg" class="input" />
             <span asp-validation-for="Project.LockArg" class="has-text-danger-dark"></span>
+            <p class="help is-size-6">You can also input a CKB address, which will be converted to lock arg.</p>
         </div>
     </div>
     <div class="field is-grouped">
